# TuSocket

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  tusockit.c  tusockit.h
tool/Tusockit/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
